gnome-shell (3.2.1-1) UNRELEASED; urgency=low

  * New upstream release
  * debian/patches/00git-ShellRecorder-Use-cogl_read_pixels.patch:
    + Dropped, fixed upstream
  * debian/patches/03_hidden_applications.patch
    + Dropped, fixed upstream
  * debian/control.in: Add libfolks-dev build-depends
  * debian/control.in: Add depends on gir1.2-accountsservice-1.0 and
    gir1.2-caribou-1.0,

 -- Sjoerd Simons <sjoerd@debian.org>  Tue, 18 Oct 2011 06:59:30 +0100

gnome-shell (3.0.2-5) unstable; urgency=low

  [ Michael Biebl ]
  * debian/rules:
    - Make network-manager and gnome-bluetooth (build) dependencies linux-any.

  [ Rico Tzschichholz ]
  * Add 00git-ShellRecorder-Use-cogl_read_pixels.patch to fix FTBFS on arm

 -- Michael Biebl <biebl@debian.org>  Fri, 14 Oct 2011 17:22:55 +0200

gnome-shell (3.0.2-4) unstable; urgency=low

  [ Josselin Mouette ]
  * Break gnome-session < 3.

  [ Rico Tzschichholz ]
  * Add 04_remove-glx-dependency-on-armel.patch to fix FTBFS on arm

  [ Michael Biebl ]
  * Upload to unstable.
  * debian/watch: Switch to .xz tarballs.
  * debian/control.in:
    - Set pkg-gnome-maintainers@lists.alioth.debian.org as Maintainer.
    - Bump Standards-Version to 3.9.2. No further changes.

 -- Michael Biebl <biebl@debian.org>  Fri, 14 Oct 2011 12:56:37 +0200

gnome-shell (3.0.2-3) experimental; urgency=low

  * Re-add gnome-bluetooth dependency.

 -- Josselin Mouette <joss@debian.org>  Mon, 19 Sep 2011 18:53:24 +0200

gnome-shell (3.0.2-2) experimental; urgency=low

  [ Martin Pitt ]
  * debian/control.in, debian/rules: When building on Ubuntu, add a dependency
    to gnome-icon-theme-full.
  * debian/control.in: Change gir1.2-json-glib-1.0 build-dep to 
    gir1.2-json-1.0 to reflect the binary rename in json-glib 
    0.13.4-2. Thanks Micah Gersten!

  [ Laurent Bigonville ]
  * debian/control.in:
    - Drop dependency against libdconf0 and let dh_installgsettings set
      the right dependencies.