@@ -18,12 +18,12 @@ Build-Depends: cdbs,
                libx11-dev,
                libclutter-1.0-dev (>= 1.5.15),
                libxfixes-dev,
-               gobject-introspection (>= 0.10.1),
-               libgirepository1.0-dev (>= 0.10.1),
-               libgjs-dev (>= 0.7.11),
-               libmutter-dev (>= 3.0.0),
-               libgtk-3-dev (>= 3.0.0),
-               libglib2.0-dev (>= 2.25.9),
+               gobject-introspection (>= 1.29.15),
+               libgirepository1.0-dev (>= 1.29.15),
+               libgjs-dev (>= 1.29.18),
+               libmutter-dev (>= 3.2.1),
+               libgtk-3-dev (>= 3.2.0),
+               libglib2.0-dev (>= 2.30.0),
                libecal1.2-dev (>= 2.32.0),
                libedataserver1.2-dev (>= 1.2.0),
                libedataserverui-3.0-dev (>= 2.91.6),
@@ -42,7 +42,10 @@ Build-Depends: cdbs,
                libpulse-dev,
                gsettings-desktop-schemas-dev (>= 0.1.7),
                libgnome-bluetooth-dev (>= 2.90.0) [linux-any],
-               gnome-bluetooth (>= 2.90.0) [linux-any]
+               gnome-bluetooth (>= 2.90.0) [linux-any],
+               libfolks-dev (>= 0.5.2),
+               libgnome-menu-3-dev,
+               libgnome-keyring-dev
 Standards-Version: 3.9.2
 Homepage: http://live.gnome.org/GnomeShell
 Vcs-Svn: svn://svn.debian.org/svn/pkg-gnome/packages/unstable/gnome-shell
@@ -51,13 +54,15 @@ Vcs-Browser: http://svn.debian.org/viewsvn/pkg-gnome/packages/unstable/gnome-she
 Package: gnome-shell
 Architecture: any
 Depends: ${gir:Depends},
-         gjs (>= 0.7.11),
+         gjs (>= 1.29.18),
          ${shlibs:Depends},
          ${misc:Depends},
          gnome-settings-daemon (>= 2.91.5.1),
          gsettings-desktop-schemas (>= 0.1.7),
          gnome-icon-theme-symbolic (>= 2.91),
          ${icon-theme:Depends},
+         gir1.2-accountsservice-1.0,
+         gir1.2-caribou-1.0,
          gir1.2-freedesktop,
          gir1.2-clutter-1.0,
          gir1.2-gconf-2.0,
@@ -69,14 +74,12 @@ Depends: ${gir:Depends},
          gir1.2-networkmanager-1.0 [linux-any],
          gir1.2-pango-1.0,
          gir1.2-polkit-1.0,
+         gir1.2-soup-2.4,
          gir1.2-telepathyglib-0.12,
          gir1.2-telepathylogger-0.2,
          gir1.2-upowerglib-1.0,
-         gir1.2-accountsservice-1.0,
-         gir1.2-caribou-1.0,
-         python (>= 2.5),
-         libfolks-dev (>= 0.5.2)
-Recommends: gnome-control-center, gnome-themes-standard
+         python (>= 2.5)
+Recommends: gnome-control-center, gnome-themes-standard, gnome-session-fallback
 Breaks: gnome-control-center (<< 1:3.0),
         gnome-session (<< 3.0)
 Description: graphical shell for the GNOME desktop
